@@ -19,6 +19,12 @@ Test the schema parsing logic.
 import unittest
 from avro import schema
 
+def print_test_name(test_name):
+  print ''
+  print test_name
+  print '=' * len(test_name)
+  print ''
+
 class ExampleSchema(object):
   def __init__(self, schema_string, valid, name='', comment=''):
     self._schema_string = schema_string
@@ -90,6 +96,11 @@ ENUM_EXAMPLES = [
     {"type": "enum",
      "symbols" : ["I", "will", "fail", "no", "name"]}
     """, False),
+  ExampleSchema("""\
+    {"type": "enum",
+     "name": "Test"
+     "symbols" : ["AA", "AA"]}
+    """, False),
 ]
 
 ARRAY_EXAMPLES = [
@@ -111,6 +122,7 @@ MAP_EXAMPLES = [
 UNION_EXAMPLES = [
   ExampleSchema('["string", "null", "long"]', True),
   ExampleSchema('["null", "null"]', False),
+  ExampleSchema('["long", "long"]', False),
   ExampleSchema("""\
     [{"type": "array", "items": "long"}
      {"type": "array", "items": "string"}]
@@ -252,48 +264,44 @@ VALID_EXAMPLES = [e for e in EXAMPLES if e.valid]
 # TODO(hammer): use logging module?
 class TestSchema(unittest.TestCase):
   def test_parse(self):
-    debug_msg = "\nTEST PARSE\n"
-    print debug_msg
-
-    num_correct = 0
+    print_test_name('TEST PARSE')
+    correct = 0
     for example in EXAMPLES:
       try:
         schema.parse(example.schema_string)
-        if example.valid: num_correct += 1
+        if example.valid: correct += 1
         debug_msg = "%s: PARSE SUCCESS" % example.name
       except:
-        if not example.valid: num_correct += 1
+        if not example.valid: correct += 1
         debug_msg = "%s: PARSE FAILURE" % example.name
       finally:
         print debug_msg
 
     fail_msg = "Parse behavior correct on %d out of %d schemas." % \
-      (num_correct, len(EXAMPLES))
-    self.assertEqual(num_correct, len(EXAMPLES), fail_msg)
+      (correct, len(EXAMPLES))
+    self.assertEqual(correct, len(EXAMPLES), fail_msg)
 
   def test_valid_cast_to_string_after_parse(self):
     """
     Test that the string generated by an Avro Schema object
     is, in fact, a valid Avro schema.
     """
-    debug_msg = "\nTEST CAST TO STRING\n"
-    print debug_msg
-
-    num_correct = 0
+    print_test_name('TEST CAST TO STRING AFTER PARSE')
+    correct = 0
     for example in VALID_EXAMPLES:
       schema_data = schema.parse(example.schema_string)
       try:
         schema.parse(str(schema_data))
         debug_msg = "%s: STRING CAST SUCCESS" % example.name
-        num_correct += 1
+        correct += 1
       except:
         debug_msg = "%s: STRING CAST FAILURE" % example.name
       finally:
         print debug_msg
 
     fail_msg = "Cast to string success on %d out of %d schemas" % \
-      (num_correct, len(VALID_EXAMPLES))
-    self.assertEqual(num_correct, len(VALID_EXAMPLES), fail_msg)
+      (correct, len(VALID_EXAMPLES))
+    self.assertEqual(correct, len(VALID_EXAMPLES), fail_msg)
 
   def test_equivalence_after_round_trip(self):
     """
@@ -302,17 +310,14 @@ class TestSchema(unittest.TestCase):
          to generate Avro schema "round trip".
     3. Ensure "original" and "round trip" schemas are equivalent.
     """
-    debug_msg = "\nTEST ROUND TRIP\n"
-    print debug_msg
-
-    num_correct = 0
+    print_test_name('TEST ROUND TRIP')
+    correct = 0
     for example in VALID_EXAMPLES:
       try:
         original_schema = schema.parse(example.schema_string)
         round_trip_schema = schema.parse(str(original_schema))
-
         if original_schema == round_trip_schema:
-          num_correct += 1
+          correct += 1
           debug_msg = "%s: ROUND TRIP SUCCESS" % example.name
         else:       
           debug_msg = "%s: ROUND TRIP FAILURE" % example.name
@@ -322,15 +327,39 @@ class TestSchema(unittest.TestCase):
         print debug_msg
 
     fail_msg = "Round trip success on %d out of %d schemas" % \
-      (num_correct, len(VALID_EXAMPLES))
-    self.assertEqual(num_correct, len(VALID_EXAMPLES), fail_msg)
+      (correct, len(VALID_EXAMPLES))
+    self.assertEqual(correct, len(VALID_EXAMPLES), fail_msg)
 
   # TODO(hammer): more tests
   def test_fullname(self):
-    """Test process for making full names from name, namespace pairs."""
-    debug_msg = '\nTEST FULL NAME\n'
-    print debug_msg
+    """
+    The fullname is determined in one of the following ways:
+     * A name and namespace are both specified.  For example,
+       one might use "name": "X", "namespace": "org.foo"
+       to indicate the fullname "org.foo.X".
+     * A fullname is specified.  If the name specified contains
+       a dot, then it is assumed to be a fullname, and any
+       namespace also specified is ignored.  For example,
+       use "name": "org.foo.X" to indicate the
+       fullname "org.foo.X".
+     * A name only is specified, i.e., a name that contains no
+       dots.  In this case the namespace is taken from the most
+       tightly encosing schema or protocol.  For example,
+       if "name": "X" is specified, and this occurs
+       within a field of the record definition
+       of "org.foo.Y", then the fullname is "org.foo.X".
 
+    References to previously defined names are as in the latter
+    two cases above: if they contain a dot they are a fullname, if
+    they do not contain a dot, the namespace is the namespace of
+    the enclosing definition.
+
+    Primitive type names have no namespace and their names may
+    not be defined in any namespace.  A schema may only contain
+    multiple definitions of a fullname if the definitions are
+    equivalent.
+    """
+    print_test_name('TEST FULLNAME')
     fullname = schema.Name.make_fullname('a', 'o.a.h')
     self.assertEqual(fullname, 'o.a.h.a')
 
